; ModuleID = '/home/carl/AnghaBench/sway/swaybar/extr_input.c_wl_touch_up.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/extr_input.c_wl_touch_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_touch = type { i32 }
%struct.swaybar_seat = type { i32 }
%struct.touch_slot = type { i32, i32*, i32, i32 }

@BTN_LEFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_touch*, i32, i32, i32)* @wl_touch_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wl_touch_up(i8* %0, %struct.wl_touch* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca %struct.wl_touch*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.swaybar_seat*, align 8
  %12 = alloca %struct.touch_slot*, align 8
  store i8* %0, i8** %6, align 8
  store %struct.wl_touch* %1, %struct.wl_touch** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = bitcast i8* %13 to %struct.swaybar_seat*
  store %struct.swaybar_seat* %14, %struct.swaybar_seat** %11, align 8
  %15 = load %struct.swaybar_seat*, %struct.swaybar_seat** %11, align 8
  %16 = getelementptr inbounds %struct.swaybar_seat, %struct.swaybar_seat* %15, i32 0, i32 0
  %17 = load i32, i32* %10, align 4
  %18 = call %struct.touch_slot* @get_touch_slot(i32* %16, i32 %17)
  store %struct.touch_slot* %18, %struct.touch_slot** %12, align 8
  %19 = load %struct.touch_slot*, %struct.touch_slot** %12, align 8
  %20 = icmp ne %struct.touch_slot* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %5
  br label %44

22:                                               ; preds = %5
  %23 = load i32, i32* %9, align 4
  %24 = load %struct.touch_slot*, %struct.touch_slot** %12, align 8
  %25 = getelementptr inbounds %struct.touch_slot, %struct.touch_slot* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = sub nsw i32 %23, %26
  %28 = icmp slt i32 %27, 500
  br i1 %28, label %29, label %41

29:                                               ; preds = %22
  %30 = load %struct.touch_slot*, %struct.touch_slot** %12, align 8
  %31 = getelementptr inbounds %struct.touch_slot, %struct.touch_slot* %30, i32 0, i32 1
  %32 = load i32*, i32** %31, align 8
  %33 = load %struct.touch_slot*, %struct.touch_slot** %12, align 8
  %34 = getelementptr inbounds %struct.touch_slot, %struct.touch_slot* %33, i32 0, i32 3
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.touch_slot*, %struct.touch_slot** %12, align 8
  %37 = getelementptr inbounds %struct.touch_slot, %struct.touch_slot* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 8
  %39 = load i32, i32* @BTN_LEFT, align 4
  %40 = call i32 @process_hotspots(i32* %32, i32 %35, i32 %38, i32 %39)
  br label %41

41:                                               ; preds = %29, %22
  %42 = load %struct.touch_slot*, %struct.touch_slot** %12, align 8
  %43 = getelementptr inbounds %struct.touch_slot, %struct.touch_slot* %42, i32 0, i32 1
  store i32* null, i32** %43, align 8
  br label %44

44:                                               ; preds = %41, %21
  ret void
}

declare dso_local %struct.touch_slot* @get_touch_slot(i32*, i32) #1

declare dso_local i32 @process_hotspots(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
